--- a/RUA oct/Cube1.html
+++ b/RUA oct/Cube1.html
@@ -470,11 +470,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 <!--#/#--><!--#css:common/css-->
 <style>
-/*#visibility.css:visibility/globalcss*/
-.visibility-hidden, .visibility-hidden * {
-    visibility: hidden !important;
-}
-/*#/#*//*#i2.cube.css:cube/base/css.1*/
+/*#i2.cube.css:cube/base/css.1*/
 #i2.shape-holder {
     position: absolute;
 
@@ -524,15 +520,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i181.image.css:image/base/css*/
-#i181 { opacity: 1; }
-/*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 53px; height: 53px;
-        -ms-transform: translate(0, 0) translate(247px, 197px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(247px, 197px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(247px, 197px) rotate(0deg);
-        transform: translate(0, 0) translate(247px, 197px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -696,15 +683,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i5.i184.image.css:image/base/css*/
-#i184 { opacity: 1; }
-/*#/#*//*#i184.i185.positioning.css:positioning/base/css.2*/
-#i184 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 53px; height: 53px;
-        -ms-transform: translate(0, 0) translate(247px, 197px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(247px, 197px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(247px, 197px) rotate(0deg);
-        transform: translate(0, 0) translate(247px, 197px) rotate(0deg);
-}
 /*#/#*//*#i5.i190.text.css:text/base/css*/
 #i190 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 21px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i190.i191.positioning.css:positioning/base/css.1*/
@@ -746,15 +724,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i6.i186.image.css:image/base/css*/
-#i186 { opacity: 1; }
-/*#/#*//*#i186.i187.positioning.css:positioning/base/css.2*/
-#i186 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 53px; height: 53px;
-        -ms-transform: translate(0, 0) translate(247px, 197px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(247px, 197px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(247px, 197px) rotate(0deg);
-        transform: translate(0, 0) translate(247px, 197px) rotate(0deg);
 }
 /*#/#*//*#i6.i192.text.css:text/base/css*/
 #i192 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 21px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
@@ -802,8 +771,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i14">¿Tienes hipoteca? Recupera los gastos de hipoteca.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/XNCu9ql.png"/>
-<!--#/#--><!--#i4.i181.image.html:image/html-->
-<img id="i181" src=""/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -814,8 +781,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/znVQLXT.png"/>
-<!--#/#--><!--#i5.i184.image.html:image/html-->
-<img id="i184" src=""/>
 <!--#/#--><!--#i5.i190.text.html:text/html-->
 <div id="i190">¿Tienes hipoteca? Recupera los gastos de hipoteca.</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
@@ -828,8 +793,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/8opvoBS.png"/>
-<!--#/#--><!--#i6.i186.image.html:image/html-->
-<img id="i186" src=""/>
 <!--#/#--><!--#i6.i192.text.html:text/html-->
 <div id="i192">¿Tienes hipoteca? Recupera los gastos de hipoteca.</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -875,10 +838,6 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 });
 /*#/#*//*#i4.i130.image.js:image/base/js*/
 
-/*#/#*//*#i4.i181.image.js:image/base/js*/
-
-/*#/#*//*#i181.i182.positioning.js:positioning/base/js.2*/
-bmShow('i181');
 /*#/#*//*#i91.i177.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
@@ -888,7 +847,11 @@ document.getElementById('i91').addEventListener('click', function(e){
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i4').addEventListener('click', function(e){
+    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
@@ -898,19 +861,15 @@ document.getElementById('i95').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://recupera-gastos-hipoteca.es/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i5.i184.image.js:image/base/js*/
-
-/*#/#*//*#i184.i185.positioning.js:positioning/base/js.2*/
-bmShow('i184');
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i5').addEventListener('click', function(e){
+    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
-/*#/#*//*#i6.i186.image.js:image/base/js*/
-
-/*#/#*//*#i186.i187.positioning.js:positioning/base/js.2*/
-bmShow('i186');
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
@@ -920,17 +879,11 @@ document.getElementById('i99').addEventListener('click', function(e){
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-
-/*#/#*//*#i183.visibility.js:visibility/js*/
-function bmShow(id) {
-    var el = document.getElementById(id);
-    el.classList.remove('visibility-hidden');
-}
-
-function bmHide(id) {
-    var el = document.getElementById(id);
-    el.classList.add('visibility-hidden');
-}
+document.getElementById('i6').addEventListener('click', function(e){
+    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*/
 
   function next(){
@@ -961,11 +914,6 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i181.image.meta:image/meta*/
-name: W8Pt59D.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i181.i182.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
@@ -980,11 +928,6 @@ data: /*!*/{}/*!*/;
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i184.image.meta:image/meta*/
-name: W8Pt59D.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i184.i185.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i190.text.meta:text/meta*/
 name: Texto; customName: 1;
@@ -1004,11 +947,6 @@ data: /*!*/{}/*!*/;
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i186.image.meta:image/meta*/
-name: W8Pt59D.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i186.i187.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i192.text.meta:text/meta*/
 name: Texto; customName: 1;
