--- a/Formatos ADS/split/split-small.html
+++ b/Formatos ADS/split/split-small.html
@@ -82,7 +82,7 @@
   display:inline-block;
   position:relative;
   width:300px;
-  height:250px;
+  height:160px;
   overflow:hidden;
   box-sizing:border-box;
   margin-top:0px;
@@ -132,7 +132,7 @@
   <div class="placeholder" style="width: 300px; height: 160px;"></div>
    <div id="te-wrapper" class="te-wrapper">
    <div style="margin-right: 0px; text-align: center;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000; font-size:15px;  font-family: Source Sans Pro;">Desde 1945 llevando con cariño el mejor pan a tu mesa.  Nutritivo, confiable y fresco.</span> <img class="logo" src="https://i.imgur.com/mdaqi33.png" alt=""> </div>
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000; font-size:16;  font-family: Source Sans Pro;">Desde 1945 llevando con cariño el mejor pan a tu mesa.</span> <img class="logo" src="https://i.imgur.com/mdaqi33.png" alt=""> </div>
                 </div>
 
                  <div id="botones-para-compartir" style="display:inline;float:left;margin-top:5px;margin-left:15px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.grupobimbo.com/es" target="_blank" style="text-decoration: none;"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/6fRu590.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.grupobimbo.com/es" target="_blank" style="text-decoration: none;"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/QN2PkjA.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://www.grupobimbo.com/es" target="_blank" style="text-decoration: none;"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/Beeft1x.png" title="compartir en twitter" width="22" /></a> </span></div>
