--- a/Formatos ADS/split/split-medium.html
+++ b/Formatos ADS/split/split-medium.html
@@ -22,6 +22,7 @@
         }
     
 .container {
+  position: absolute;
             width: 318px;
             height: 478px;
             margin: 0 auto;
@@ -120,7 +121,7 @@
 </head>
 
 <body>
-   <div class="container">
+   <div class="container" style="width: 318px; height: 478px;">
     <a href="https://www.grupobimbo.com/es" target="_blank" style="text-decoration: none;">
   <div class="placeholder"></div>
    <div id="te-wrapper" class="te-wrapper">
