--- a/Formatos ADS/split/split-small.html
+++ b/Formatos ADS/split/split-small.html
@@ -23,6 +23,7 @@
         }
     
 .container {
+  position: absolute;
             width: 300px;
             height: 250px;
             margin: 0 auto;
@@ -128,10 +129,12 @@
 
 <body>
    <div class="container">
-    <a href="https://www.grupobimbo.com/es" target="_blank" style="text-decoration: none;">
+    
   <div class="placeholder" style="width: 300px; height: 160px;"></div>
+  
    <div id="te-wrapper" class="te-wrapper">
    <div style="margin-right: 0px; text-align: center;">
+    <a href="https://www.grupobimbo.com/es" target="_blank" style="text-decoration: none;">
                     <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000; font-size:16;  font-family: Source Sans Pro;">Desde 1945 llevando con cariño el mejor pan a tu mesa.</span> <img class="logo" src="https://i.imgur.com/mdaqi33.png" alt=""> </div>
                 </div>
 
