--- a/Formatos ADS/split/split-medium.html
+++ b/Formatos ADS/split/split-medium.html
@@ -116,7 +116,7 @@
             float: right;
             height: 30px;
             text-align: center;
-            margin-top: 35px;
+            margin-top: 15px;
             margin-right: 2.5px
         }
         
@@ -136,10 +136,10 @@
    <div id="te-wrapper" class="te-wrapper">
    <div style="margin-right: 0px; text-align: justify;">
      <a href="https://www.grupobimbo.com/es" target="_blank" style="text-decoration: none;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000; font-size:26px;  font-family: Source Sans Pro;">Desde 1945 llevando con cariño el mejor pan a tu mesa. Nutritivo y fresco.</span> <img class="logo" src="https://i.imgur.com/mdaqi33.png" alt=""> </div>
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000; font-size:24px;  font-family: Source Sans Pro;">Desde 1945 llevando con cariño el mejor pan a tu mesa. Suave y fresco como el amor de mamá.</span> <img class="logo" src="https://i.imgur.com/mdaqi33.png" alt=""> </div>
                 </div>
 
-                 <div id="botones-para-compartir" style="display:inline;float:left;margin-top:15px;margin-left:15px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.grupobimbo.com/es" target="_blank" style="text-decoration: none;"> <img alt="compartir en facebook" class="facebooki" height="24" src="https://i.imgur.com/6fRu590.png" title="compartir en facebook" width="24" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.grupobimbo.com/es" target="_blank" style="text-decoration: none;"> <img alt="compartir en google+" class="googlei" height="24" src="https://i.imgur.com/QN2PkjA.png" title="compartir en google+" width="24" /></a><a class="shared" href="https://twitter.com/home?status=https://www.grupobimbo.com/es" target="_blank" style="text-decoration: none;"> <img alt="compartir en twitter" class="twitteri" height="24" src="https://i.imgur.com/Beeft1x.png" title="compartir en twitter" width="24" /></a> </span></div>
+                 <div id="botones-para-compartir" style="display:inline;float:left;margin-top:18px;margin-left:15px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.grupobimbo.com/es" target="_blank" style="text-decoration: none;"> <img alt="compartir en facebook" class="facebooki" height="24" src="https://i.imgur.com/6fRu590.png" title="compartir en facebook" width="24" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.grupobimbo.com/es" target="_blank" style="text-decoration: none;"> <img alt="compartir en google+" class="googlei" height="24" src="https://i.imgur.com/QN2PkjA.png" title="compartir en google+" width="24" /></a><a class="shared" href="https://twitter.com/home?status=https://www.grupobimbo.com/es" target="_blank" style="text-decoration: none;"> <img alt="compartir en twitter" class="twitteri" height="24" src="https://i.imgur.com/Beeft1x.png" title="compartir en twitter" width="24" /></a> </span></div>
             </div>
         </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js'></script>
