--- a/American Colors/Venetian.html
+++ b/American Colors/Venetian.html
@@ -2149,7 +2149,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(226px, 220px) rotate(0deg);
 }
 /*#/#*//*#i46.text.css:text/base/css*/
-#i46 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i46 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, sans-serif; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
 #i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 232px; height: 30px;
         -ms-transform: translate(0, 0) translate(29px, 189px) rotate(0deg);
