--- a/American Colors/Venetian.html
+++ b/American Colors/Venetian.html
@@ -2149,13 +2149,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(226px, 220px) rotate(0deg);
 }
 /*#/#*//*#i46.text.css:text/base/css*/
-#i46 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, sans-serif; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i46 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 232px; height: 30px;
-        -ms-transform: translate(0, 0) translate(29px, 189px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(29px, 189px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(29px, 189px) rotate(0deg);
-        transform: translate(0, 0) translate(29px, 189px) rotate(0deg);
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 258px; height: 30px;
+        -ms-transform: translate(0, 0) translate(18px, 192px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(18px, 192px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(18px, 192px) rotate(0deg);
+        transform: translate(0, 0) translate(18px, 192px) rotate(0deg);
 }
 /*#/#*//*#i42.shape.css:shape/base/css*/
 #i42 { background-color: ; opacity: 1;
@@ -2269,7 +2269,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i48.image.html:image/html-->
 <img id="i48" src="https://i.imgur.com/LqB42gF.png"/>
 <!--#/#--><!--#i46.text.html:text/html-->
-<div id="i46">¿Pintas o decoras?</div>
+<div id="i46">NO PINTAS... ¡DECORAS!</div>
 <!--#/#--><!--#i42.shape.html:shape/html-->
 <div id="i42"></div>
 <!--#/#--><!--#i50.image.html:image/html-->
@@ -2426,7 +2426,7 @@ customName: false;
 /*#/#*//*#i48.i49.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i46.text.meta:text/meta*/
-name: ¿Pintas o decoras?; customName: false;
+name: NO PINTAS... ¡DECORAS!; customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i42.shape.meta:shape/meta*/
