--- a/American Colors/Slider300x600.html
+++ b/American Colors/Slider300x600.html
@@ -234,7 +234,7 @@
                     <img src="https://i.imgur.com/DscBtoo.png" alt="" />
                 </div>
                 <div class="te-cover">
-                    <img src="https://i.imgur.com/s4GBahH.jpg" alt="" />
+                    <img src="https://i.imgur.com/q9fMxEb.png" alt="" />
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
