--- a/American Colors/Slider300x600.html
+++ b/American Colors/Slider300x600.html
@@ -245,7 +245,7 @@
                         
                         <span class="bzm_text_medium" style="color: black;line-height:1em; font-size:18px; width:99%; text-align:center;">
                         <p style="margin-top: -60px; line-height: 1.2em; margin-left: 3px; ">
-                        <strong>American Colors </strong> es la <i>marca premium</i> de pinturas en el Perú y la mejor opción para decorar el hogar. Tiene mejor acabado, mejor poder cubriente y mejor resistencia versus las pinturas convencionales...<i>Leer más. </i>
+                        <strong>American Colors </strong> es la <i>marca premium</i> de pinturas en el Perú y la <b>mejor opción</b> para decorar el hogar. Tiene mejor acabado, mejor poder cubriente y mejor resistencia versus las pinturas convencionales...<i> Leer más. </i>
 </p></span></div>
 
                             <div class="logo">
