--- a/Promoda/Fade.html
+++ b/Promoda/Fade.html
@@ -63,19 +63,19 @@
         }
 
         .corona .bzm_cover {
-            height: 150px
+            height: 160px
         }
 
         .corona .bg.cover-1 {
-            background-image: url(https://i.imgur.com/sSKgxmT.png)
+            background-image: url(https://i.imgur.com/uz58dqK.png)
         }
 
         .corona .bg.cover-2 {
-            background-image: url(https://i.imgur.com/N4vZvBf.png)
+            background-image: url(https://i.imgur.com/DmYdwDR.png)
         }
 
         .corona .bg.cover-3 {
-            background-image: url(https://i.imgur.com/kQyNO6M.jpg)
+            background-image: url(https://i.imgur.com/b0Cz128.png)
         }
 
         .corona .bzm_cover.bzm_pos_tl {
@@ -108,7 +108,7 @@
             line-height: 1.1;
             color: #000;
             text-align: center;
-            margin-top: 5px;
+            margin-top: 10px;
             width: 99%;
             
         }
@@ -275,8 +275,8 @@
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
             <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:24px;text-align:center;"> ¿Están ahí mis vidas?</span></div>
-            <div style="bottom:0px;height:40px;text-align:right ;margin-top:10px; margin-right: 5px;"> <img src="https://i.imgur.com/lmIHgDF.png" style="height:35px;margin-top:3px;">
-              <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top: -28px;">
+            <div style="bottom:0px;height:40px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/lmIHgDF.png" style="height:35px;margin-top:3px;">
+              <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px; margin-top: -35px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://mejorvenapromoda.com/"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/VGU7zxd.png" title="compartir en facebook" width="22" /></a>
