--- a/Promoda/FadeBig.html
+++ b/Promoda/FadeBig.html
@@ -60,12 +60,12 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/v4A6lB1.png");
+            background: url("https://i.imgur.com/4j4JFt4.png");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/HigKiI1.png");
+            background: url("https://i.imgur.com/LvfyAD5.png");
             background-size: cover;
             
         }
