--- a/Formatos ADS/carrusel/index.html
+++ b/Formatos ADS/carrusel/index.html
@@ -158,8 +158,6 @@ this.Adf=this.Adf||{},this.Adf.animate=function(){"use strict";function t(t){var
 
 /*#/#*//*#i7.i10.image.css:image/base/css*/
 #i10 { opacity: 1; }
-/*#/#*//*#i77.i78.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i10 { cursor: pointer; }
 /*#/#*//*#i10.i11.positioning.css:positioning/base/css.1*/
 #i10 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 228px; height: 190px;
         -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
@@ -169,8 +167,6 @@ this.Adf=this.Adf||{},this.Adf.animate=function(){"use strict";function t(t){var
 }
 /*#/#*//*#i28.i35.image.css:image/base/css*/
 #i35 { opacity: 1; }
-/*#/#*//*#i89.i90.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i35 { cursor: pointer; }
 /*#/#*//*#i35.i36.positioning.css:positioning/base/css.1*/
 #i35 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 228px; height: 190px;
         -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
@@ -221,8 +217,6 @@ this.Adf=this.Adf||{},this.Adf.animate=function(){"use strict";function t(t){var
 }
 /*#/#*//*#i29.i38.image.css:image/base/css*/
 #i38 { opacity: 1; }
-/*#/#*//*#i91.i92.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i38 { cursor: pointer; }
 /*#/#*//*#i38.i39.positioning.css:positioning/base/css.1*/
 #i38 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 228px; height: 190px;
         -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
@@ -333,8 +327,6 @@ this.Adf=this.Adf||{},this.Adf.animate=function(){"use strict";function t(t){var
 .adf-Controls--showNextSlide.horizontal {
     right: 0px;
 }
-/*#/#*//*#i95.i96.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i44 { cursor: pointer; }
 /*#/#*//*#carousel.css:carousel/globalcss.1*/
 .adf-Carousel .hidden {
     visibility: hidden
@@ -540,8 +532,6 @@ this.Adf=this.Adf||{},this.Adf.animate=function(){"use strict";function t(t){var
 }
 /*#/#*//*#i32.i47.image.css:image/base/css*/
 #i47 { opacity: 1; }
-/*#/#*//*#i97.i98.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i47 { cursor: pointer; }
 /*#/#*//*#i47.i48.positioning.css:positioning/base/css.1*/
 #i47 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 228px; height: 190px;
         -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
@@ -608,8 +598,6 @@ this.Adf=this.Adf||{},this.Adf.animate=function(){"use strict";function t(t){var
 }
 /*#/#*//*#i34.i53.image.css:image/base/css*/
 #i53 { opacity: 1; }
-/*#/#*//*#i101.i102.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i53 { cursor: pointer; }
 /*#/#*//*#i53.i54.positioning.css:positioning/base/css.1*/
 #i53 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 228px; height: 190px;
         -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
@@ -850,43 +838,13 @@ document.getElementById('i3').addEventListener('rotateNext', function(e){
 
 /*#/#*//*#i7.i10.image.js:image/base/js*/
 
-/*#/#*//*#i10.i77.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i10');
-
-el.addEventListener('click', function(e){
-    /*#i77.i78.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i10.i105.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i10');
-
-el.addEventListener('click', function(e){
-    /*#i105.i106.actions-trigger.js:actions-trigger/base/js*/
-    // Name: Trigger nothing on 
-    var el = document.getElementById('');
-    var event = document.createEvent('Event');
-    event.initEvent('pauseVideo', false, true);
-    if (el) el.dispatchEvent(event);
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i7.i182.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i7');
 
 el.addEventListener('click', function(e){
     /*#i182.i183.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'http://www.koketa.com/56-maternity'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -895,43 +853,13 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i28.i35.image.js:image/base/js*/
 
-/*#/#*//*#i35.i89.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i35');
-
-el.addEventListener('click', function(e){
-    /*#i89.i90.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i35.i115.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i35');
-
-el.addEventListener('click', function(e){
-    /*#i115.i116.actions-trigger.js:actions-trigger/base/js*/
-    // Name: Trigger nothing on 
-    var el = document.getElementById('');
-    var event = document.createEvent('Event');
-    event.initEvent('pauseVideo', false, true);
-    if (el) el.dispatchEvent(event);
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i28.i184.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i28');
 
 el.addEventListener('click', function(e){
     /*#i184.i185.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG6')) : window.open(dhtml.getVar('clickTAG6', 'http://www.koketa.com/16-leggings'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -963,49 +891,58 @@ document.addEventListener("DOMContentLoaded", function(event) {
 });
 /*#/#*//*#i146.i147.image.js:image/base/js*/
 
+/*#/#*//*#i146.i200.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i146');
+
+el.addEventListener('click', function(e){
+    /*#i200.i201.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG7')) : window.open(dhtml.getVar('clickTAG7', 'http://www.koketa.com/39-linea-termica'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i149.i150.image.js:image/base/js*/
 
+/*#/#*//*#i149.i202.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i149');
+
+el.addEventListener('click', function(e){
+    /*#i202.i203.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG7')) : window.open(dhtml.getVar('clickTAG7', 'http://www.koketa.com/39-linea-termica'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i152.i153.image.js:image/base/js*/
 
+/*#/#*//*#i152.i204.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i152');
+
+el.addEventListener('click', function(e){
+    /*#i204.i205.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG7')) : window.open(dhtml.getVar('clickTAG7', 'http://www.koketa.com/39-linea-termica'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i29.i38.image.js:image/base/js*/
 
-/*#/#*//*#i38.i91.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i38');
-
-el.addEventListener('click', function(e){
-    /*#i91.i92.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i38.i117.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i38');
-
-el.addEventListener('click', function(e){
-    /*#i117.i118.actions-trigger.js:actions-trigger/base/js*/
-    // Name: Trigger nothing on 
-    var el = document.getElementById('');
-    var event = document.createEvent('Event');
-    event.initEvent('pauseVideo', false, true);
-    if (el) el.dispatchEvent(event);
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i29.i186.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i29');
 
 el.addEventListener('click', function(e){
     /*#i186.i187.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.koketa.com/60-lingerie'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1020,7 +957,7 @@ var el = document.getElementById('i30');
 
 el.addEventListener('click', function(e){
     /*#i188.i189.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG8')) : window.open(dhtml.getVar('clickTAG8', 'http://www.koketa.com/204-outlet'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1029,43 +966,13 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i31.i44.image.js:image/base/js*/
 
-/*#/#*//*#i44.i95.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i44');
-
-el.addEventListener('click', function(e){
-    /*#i95.i96.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG7')) : window.open(dhtml.getVar('clickTAG7', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i44.i121.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i44');
-
-el.addEventListener('click', function(e){
-    /*#i121.i122.actions-trigger.js:actions-trigger/base/js*/
-    // Name: Trigger nothing on 
-    var el = document.getElementById('');
-    var event = document.createEvent('Event');
-    event.initEvent('pauseVideo', false, true);
-    if (el) el.dispatchEvent(event);
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i31.i190.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i31');
 
 el.addEventListener('click', function(e){
     /*#i190.i191.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.koketa.com/60-lingerie'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1074,43 +981,13 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i32.i47.image.js:image/base/js*/
 
-/*#/#*//*#i47.i97.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i47');
-
-el.addEventListener('click', function(e){
-    /*#i97.i98.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG8')) : window.open(dhtml.getVar('clickTAG8', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i47.i123.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i47');
-
-el.addEventListener('click', function(e){
-    /*#i123.i124.actions-trigger.js:actions-trigger/base/js*/
-    // Name: Trigger nothing on 
-    var el = document.getElementById('');
-    var event = document.createEvent('Event');
-    event.initEvent('pauseVideo', false, true);
-    if (el) el.dispatchEvent(event);
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i32.i192.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i32');
 
 el.addEventListener('click', function(e){
     /*#i192.i193.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG9')) : window.open(dhtml.getVar('clickTAG9', 'http://www.koketa.com/84-silver-media-panty-con-diseno'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1159,7 +1036,7 @@ var el = document.getElementById('i33');
 
 el.addEventListener('click', function(e){
     /*#i194.i195.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG6')) : window.open(dhtml.getVar('clickTAG6', 'http://www.koketa.com/16-leggings'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1168,19 +1045,6 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i34.i53.image.js:image/base/js*/
 
-/*#/#*//*#i53.i101.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i53');
-
-el.addEventListener('click', function(e){
-    /*#i101.i102.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG10')) : window.open(dhtml.getVar('clickTAG10', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i53.i172.animations.js:animations/js.1*/
 (function(){
     var ADFAnimTarget_i172 = document.getElementById('i53');
@@ -1211,7 +1075,7 @@ var el = document.getElementById('i34');
 
 el.addEventListener('click', function(e){
     /*#i196.i197.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG10')) : window.open(dhtml.getVar('clickTAG10', 'http://www.koketa.com/54-mini'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1226,7 +1090,7 @@ var el = document.getElementById('i67');
 
 el.addEventListener('click', function(e){
     /*#i198.i199.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG12')) : window.open(dhtml.getVar('clickTAG12', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1239,7 +1103,7 @@ var el = document.getElementById('i69');
 
 el.addEventListener('click', function(e){
     /*#i174.i175.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG12')) : window.open(dhtml.getVar('clickTAG12', 'http://www.koketa.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
