--- a/Promoda/Cube.html
+++ b/Promoda/Cube.html
@@ -913,7 +913,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">Noviembre 2018 en exclusiva</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/uz58dqK.png"/>
+<img id="i58" src="https://i.imgur.com/vhukDp6.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
