--- a/Promoda/Fade.html
+++ b/Promoda/Fade.html
@@ -75,7 +75,7 @@
         }
 
         .corona .bg.cover-3 {
-            background-image: url(https://i.imgur.com/b0Cz128.png)
+            background-image: url(https://i.imgur.com/vhukDp6.png)
         }
 
         .corona .bzm_cover.bzm_pos_tl {
