--- a/Promoda/Cube.html
+++ b/Promoda/Cube.html
@@ -913,7 +913,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">Noviembre 2018 en exclusiva</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/vhukDp6.png"/>
+<img id="i58" src="https://i.imgur.com/uz58dqK.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
@@ -933,7 +933,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">Siempre algo bueno para todos.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/b0Cz128.png"/>
+<img id="i60" src="https://i.imgur.com/vhukDp6.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i186.image.html:image/html-->
