listo el cambio

--- a/Promoda/FadeBig.html
+++ b/Promoda/FadeBig.html
@@ -60,18 +60,18 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/4j4JFt4.png");
+            background: url("https://i.imgur.com/rY6QEU4.png");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/LvfyAD5.png");
+            background: url("https://i.imgur.com/xmQG2qj.png");
             background-size: cover;
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/8OqS3cd.png");
+            background: url("https://i.imgur.com/Zp1bmQx.png");
             background-size: cover;
             
         }
