--- a/Promoda/Cube.html
+++ b/Promoda/Cube.html
@@ -933,7 +933,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">Siempre algo bueno para todos.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/vhukDp6.png"/>
+<img id="i60" src="https://i.imgur.com/L9MpMa1.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i186.image.html:image/html-->
