--- a/Promoda/FadeBig.html
+++ b/Promoda/FadeBig.html
@@ -71,7 +71,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/Zp1bmQx.png");
+            background: url("https://i.imgur.com/WI2eHxE.png");
             background-size: cover;
             
         }
