--- a/Promoda/Fade.html
+++ b/Promoda/Fade.html
@@ -71,7 +71,7 @@
         }
 
         .corona .bg.cover-2 {
-            background-image: url(https://i.imgur.com/DmYdwDR.png)
+            background-image: url(https://i.imgur.com/CJM6o4b.png)
         }
 
         .corona .bg.cover-3 {
