--- a/Promoda/Cube.html
+++ b/Promoda/Cube.html
@@ -893,7 +893,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¿Están ahí mis vidas?</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/DmYdwDR.png"/>
+<img id="i130" src="https://i.imgur.com/CJM6o4b.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
