--- a/Garat/Venetian.html
+++ b/Garat/Venetian.html
@@ -2282,7 +2282,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i48.image.html:image/html-->
 <img id="i48" src="https://i.imgur.com/3DUpBDr.png"/>
 <!--#/#--><!--#i46.text.html:text/html-->
-<div id="i46">¿Ya probaste las nuevas cápsulas  tipo expresso de Garat? Irresistible ároma, sabor único.</div>
+<div id="i46">¿Ya probaste las nuevas cápsulas  tipo espresso de Garat? Irresistible ároma, sabor único.</div>
 <!--#/#--><!--#i42.shape.html:shape/html-->
 <div id="i42"></div>
 <!--#/#--><!--#i50.image.html:image/html-->
