formatos pendientes por pullear

--- a/excellence/fadesee.html
+++ b/excellence/fadesee.html
@@ -83,11 +83,11 @@
         .value_cover .value_logo {
             position: absolute;
             bottom: -15px;
-            width:105px;
+            width:180px;
             line-height: 1.3em;
             z-index: 2;
-            margin-left: 40%;
-            left: -30px;
+            margin-left: 55px;
+           
             background-color: #ad8b3a;
             padding: 5px;
             border-radius: 20px;
